--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel=stylesheet href='../css/bootstrap.min.css' />
-    <link rel=stylesheet href='../css/bootstrap-theme.min.css' />
+    <head>
+      <link rel=stylesheet href='../css/bootstrap.min.css' />
+      <link rel=stylesheet href='../css/bootstrap-theme.min.css' />
+      <link rel=stylesheet href='../css/main.css' />
     <title>BDAA</title>
-  </head>
-  <body>
-  	<div class='jumbotron'>
-  		<h1 class='text-center'>Welcome to BDAA's Home Page!</h1>
-  	</div>
-  </body>
+    </head>
+    <body>
+        <div class='jumbotron'>
+            <h1 class='text-center'><b>Welcome to BDAA's Home Page!</b></h1>
+        </div>
+    </body>
 </html>
