Got started with basic animations

--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel=stylesheet href='../css/bootstrap.min.css' />
-      <link rel=stylesheet href='../css/bootstrap-theme.min.css' />
-      <link rel=stylesheet href='../css/main.css' />
+        <link rel=stylesheet href='../css/bootstrap.min.css' />
+        <link rel=stylesheet href='../css/bootstrap-theme.min.css' />
+        <link rel=stylesheet href='../css/main.css' />
+        <link rel=stylesheet href='../css/animations.css' />
     <title>BDAA</title>
     </head>
     <body>
-        <div class='jumbotron'>
+        <div class='jumbotron topslide'>
             <h1 class='text-center'><b>Welcome to BDAA's Home Page!</b></h1>
         </div>
     </body>
