Set up for digital ocean hosting. Calendar styling implemented.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <script src="https://use.fontawesome.com/50a073a5be.js"></script>
-        <link rel=stylesheet href='../css/bootstrap.min.css' />
-        <link rel=stylesheet href='../css/bootstrap-theme.min.css' />
-        <link rel=stylesheet href='../css/main.css' />
-        <link rel=stylesheet href='../css/animations.css' />
+        <link rel=stylesheet href='/css/bootstrap.min.css' />
+        <link rel=stylesheet href='/css/bootstrap-theme.min.css' />
+        <link rel=stylesheet href='/css/main.css' />
+        <link rel=stylesheet href='/css/animations.css' />
     <title>BDAA</title>
     </head>
     <body>
@@ -65,7 +65,10 @@
                     </div>
                     <br />
                     <br />
-                    
+                    <div class="row padded centered">
+			  <iframe id="gcal" class="calendar-frame" src="cal.php">
+			  </iframe>
+		    </div>
                     <div class="row padded centered">
                         <h2><b>Find Us</b></h2>
                         <div class="container">
@@ -83,7 +86,10 @@
                         </div>
                     </div>
                 </div>
+
             </div>
+
+
         </div>
         <div class="col-sm-2 col-lg-2">
         </div>
