Calendar styling almost there. Need to find a way to remove onmousedown etc from td elements

--- a/index.html
+++ b/index.html
@@ -55,22 +55,27 @@
             <div class='jumbotron main-content'>
                 <div class='container padded'>
                     <div class="row padded">
-                        <h1>News</h1>
-                        <br />
+                        <h1 class="centered">News</h1>
                         <h2><b>Networking Night Fall 2017</b></h2>
                         <p>Join us for our Networking night on September 25 in the Performance Hall of the Ohio Union.</p>
-                        <br />
+
                         <h2><b>BDAA Brunch</b></h2>
                         <p>Don't miss us at the BDAA brunch at ethyl!</p>
                     </div>
-                    <br />
-                    <br />
+                </div>
+            </div>
+            <div class='jumbotron main-content'>
+                <div class='container padded'>
+                    <h1 class="centered">Events</h1>
                     <div class="row padded centered">
-			  <iframe id="gcal" class="calendar-frame" src="cal.php">
+			  <iframe id="gcal" class="calendar-frame" allowtransparency="true" src="cal.php">
 			  </iframe>
-		    </div>
+                    </div>
+                </div>
+            </div>
+            <div class='jumbotron main-content'>
                     <div class="row padded centered">
-                        <h2><b>Find Us</b></h2>
+                        <h1>Find Us</h1>
                         <div class="container">
                           <div class="btn-group btn-group-justified">
                             <div class="btn-group">
