Set up php include for headers and footers

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a class="active" href="#">Home</a>
                 </li>
                 <li class="">
-                    <a class="" href="#">About Us</a>
+                    <a class="" href="aboutus.html">About Us</a>
                 </li>
                 <li class="">
                     <a class="" href="#">Education</a>
@@ -55,7 +55,7 @@
             <div class='jumbotron main-content'>
                 <div class='container padded'>
                     <div class="row padded">
-                        <h1 class="centered">News</h1>
+                        <h1 class="">News</h1>
                         <h2><b>Networking Night Fall 2017</b></h2>
                         <p>Join us for our Networking night on September 25 in the Performance Hall of the Ohio Union.</p>
 
@@ -66,17 +66,18 @@
             </div>
             <div class='jumbotron main-content'>
                 <div class='container padded'>
-                    <h1 class="centered">Events</h1>
-                    <div class="row padded centered">
+                    <h1 class="pad-left">Events</h1>
+                    <br />
 			  <iframe id="gcal" class="calendar-frame" allowtransparency="true" src="cal.php">
 			  </iframe>
-                    </div>
+                    
                 </div>
             </div>
             <div class='jumbotron main-content'>
-                    <div class="row padded centered">
-                        <h1>Find Us</h1>
-                        <div class="container">
+                    <div class="row padded">
+                        <h1 class="black">Find Us</h1>
+                        <br />
+                        <div class="container centered">
                           <div class="btn-group btn-group-justified">
                             <div class="btn-group">
                                 <a target="new" class="btn btnred" href="mailto:ohiostatebdaa@gmail.com"><span style="color:white;" class="glyphicon-large"><i class="fa fa-envelope" aria-hidden="true"></i></span></a>
