Mirgrated bulk of site content

--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,8 @@
         <link rel=stylesheet href='/css/bootstrap.min.css' />
         <link rel=stylesheet href='/css/bootstrap-theme.min.css' />
         <link rel=stylesheet href='/css/main.css' />
-        <link rel=stylesheet href='/css/animations.css' />
+        <script src="/js/jquery-3.2.1.min.js"></script>
+        <script src="/js/helper.js"></script>
     <title>BDAA</title>
     </head>
     <body>
@@ -13,29 +14,29 @@
                 <li class="filler">
                     <a class="" href="#"></a>
                 </li>
-                <li class="active">
-                    <a class="active" href="#">Home</a>
+                <li class="nav active">
+                    <a id="nav-link-home" class="" href="index.php">Home</a>
                 </li>
-                <li class="">
-                    <a class="" href="aboutus.html">About Us</a>
+                <li class="nav">
+                    <a id="nav-link-aboutus" class="" href="aboutus.php">About Us</a>
                 </li>
-                <li class="">
-                    <a class="" href="#">Education</a>
+                <li class="nav">
+                    <a id="nav-link-education" class="" href="education.php">Education</a>
                 </li>
-                <li class="">
-                    <a class="" href="#">Officers</a>
+                <li class="nav">
+                    <a id="nav-link-officers" class="" href="officers.php">Officers</a>
                 </li>
-                <li class="">
-                    <a class="" href="#">Career Fairs</a>
+                <li class="nav">
+                    <a id="nav-link-careerfairs" class="" href="careerfairs.php">Career Fairs</a>
                 </li>
-                <li class="">
-                    <a class="" href="#">Sponsors</a>
+                <li class="nav">
+                    <a id="nav-link-sponsors" class="" href="sponsors.php">Sponsors</a>
                 </li>
-                <li class="">
-                    <a class="" href="#">Gallery</a>
+                <li class="nav">
+                    <a id="nav-link-gallery" class="" href="gallery.php">Gallery</a>
                 </li>
-                <li class="">
-                    <a class="" target="new" href="http://eepurl.com/bFPaLb">Email List</a>
+                <li class="nav">
+                    <a id="nav-link-emaillist" class="" target="new" href="http://eepurl.com/bFPaLb">Email List</a>
                 </li>
                 <img class="osulogo" src="../img/osulogo.png">
                 
