--- a/footer.html
+++ b/footer.html
@@ -1,31 +1,30 @@
 
-<html>      
-    <head>
-        <script src="https://use.fontawesome.com/50a073a5be.js"></script>
-        <link rel=stylesheet href='/css/bootstrap.min.css' />
-        <link rel=stylesheet href='/css/bootstrap-theme.min.css' />
-        <link rel=stylesheet href='/css/main.css' />
-    <title>BDAA</title>
-    </head>  
-    <body>
-                <div class='jumbotron main-content'>
-                    <div class="row padded">
-                        <h1 class="black">Find Us</h1>
-                        <br />
-                        <div class="container centered">
-                          <div class="btn-group btn-group-justified">
-                            <div class="btn-group">
-                                <a target="new" class="btn btnred" href="mailto:ohiostatebdaa@gmail.com"><span style="color:white;" class="glyphicon-large"><i class="fa fa-envelope" aria-hidden="true"></i></span></a>
-                            </div>
-                            <div class="btn-group">
-                                <a target="new" class="btn btnred" href="https://twitter.com/ohiostatebdaa"><span style="color:white;" class="glyphicon-large"><i class="fa fa-twitter" aria-hidden="true"></i></span></a>
-                            </div>
-                            <div class="btn-group">
-                                <a target="new" class="btn btnred" href="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23c0c0c0&amp;src=39puh1lr6t17cs634lsmdrn86k%40group.calendar.google.com&amp;color=%23A32929&amp;ctz=America%2FNew_York"><span style="color:white;" class="glyphicon-large"><i class="fa fa-calendar" aria-hidden="true"></i></span></a>
-                            </div>
-                          </div>
-                        </div>
-                    </div>
-                </div>
-    </body>
-</html>
+<div class='jumbotron main-content'>
+    <div class="row padded">
+        <h2 id="findus">Find Us</h2>
+        <br />
+        <div class="container centered">
+          <div class="btn-group btn-group-justified">
+            <div class="btn-group">
+                <a target="new" class="btn btnred" href="mailto:ohiostatebdaa@gmail.com"><span style="color:white;" class="glyphicon-large"><i class="fa fa-envelope" aria-hidden="true"></i></span></a>
+            </div>
+            <div class="btn-group">
+                <a target="new" class="btn btnred" href="https://twitter.com/ohiostatebdaa"><span style="color:white;" class="glyphicon-large"><i class="fa fa-twitter" aria-hidden="true"></i></span></a>
+            </div>
+            <div class="btn-group">
+                <a target="new" class="btn btnred" href="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23c0c0c0&amp;src=39puh1lr6t17cs634lsmdrn86k%40group.calendar.google.com&amp;color=%23A32929&amp;ctz=America%2FNew_York"><span style="color:white;" class="glyphicon-large"><i class="fa fa-calendar" aria-hidden="true"></i></span></a>
+            </div>
+            <div class="btn-group">
+                <a target="new" class="btn btnred" href="https://www.facebook.com/bdaaosu"><span style="color:white;" class="glyphicon-large"><i class="fa fa-facebook" aria-hidden="true"></i></span></a>
+            </div>
+            <div class="btn-group">
+                <a target="new" class="btn btnred" href="https://www.facebook.com/bdaaosu"><span style="color:white;" class="glyphicon-large"><i class="fa fa-linkedin" aria-hidden="true"></i></span></a>
+            </div>
+            <div class="btn-group">
+                <a target="new" class="btn btnred" href="https://github.com/OhioStateBDAA"><span style="color:white;" class="glyphicon-large"><i class="fa fa-github" aria-hidden="true"></i></span></a>
+            </div>
+          </div>
+        </div>
+    </div>
+</div>
+
