--- a/nav.html
+++ b/nav.html
@@ -5,6 +5,7 @@
         <link rel=stylesheet href='/css/bootstrap-theme.min.css' />
         <link rel=stylesheet href='/css/main.css' />
         <script src="/js/jquery-3.2.1.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="/js/helper.js"></script>
     <title>BDAA</title>
     </head>
