htaccess work. should not show.

--- a/nav.html
+++ b/nav.html
@@ -39,13 +39,13 @@
                 <li class="nav">
                     <a id="nav-link-emaillist" class="" target="new" href="http://eepurl.com/bFPaLb">Email List</a>
                 </li>
-                <img class="osulogo" src="../img/osulogo.png">
+                <img class="osulogo" src="/img/osulogo.png">
                 
                 
             </ul>
         </div>
         <span class='topslide topbar'>
-            <img class='logo' src='../img/Logo.png' />
+            <img class='logo' src='/img/Logo.png' />
         </span>
         <br />
         <div class='leftslide'>
