Added resume pool and job postings

--- a/nav.html
+++ b/nav.html
@@ -16,25 +16,31 @@
                     <a class="" href="#"></a>
                 </li>
                 <li class="nav active">
-                    <a id="nav-link-home" class="" href="index.php">Home</a>
+                    <a id="nav-link-home" class="" href="/index.php">Home</a>
                 </li>
                 <li class="nav">
-                    <a id="nav-link-aboutus" class="" href="aboutus.php">About Us</a>
+                    <a id="nav-link-aboutus" class="" href="/aboutus.php">About Us</a>
                 </li>
                 <li class="nav">
-                    <a id="nav-link-education" class="" href="education.php">Education</a>
+                    <a id="nav-link-education" class="" href="/education.php">Education</a>
                 </li>
                 <li class="nav">
-                    <a id="nav-link-officers" class="" href="officers.php">Officers</a>
+                    <a id="nav-link-officers" class="" href="/officers.php">Officers</a>
                 </li>
                 <li class="nav">
-                    <a id="nav-link-careerfairs" class="" href="careerfairs.php">Career Fairs</a>
+                    <a id="nav-link-careerfairs" class="" href="/careerfairs.php">Career Fairs</a>
                 </li>
                 <li class="nav">
-                    <a id="nav-link-sponsors" class="" href="sponsors.php">Sponsors</a>
+                    <a id="nav-link-sponsors" class="" href="/sponsors.php">Sponsors</a>
                 </li>
                 <li class="nav">
-                    <a id="nav-link-gallery" class="" href="gallery.php">Gallery</a>
+                    <a id="nav-link-gallery" class="" href="/gallery.php">Gallery</a>
+                </li>
+                <li class="nav">
+                    <a id="nav-link-jobs" class="" href="/jobs/">Job Postings</a>
+                </li>
+                <li class="nav">
+                    <a id="nav-link-resume" class="" href="/resume/">Resume Pool</a>
                 </li>
                 <li class="nav">
                     <a id="nav-link-emaillist" class="" target="new" href="http://eepurl.com/bFPaLb">Email List</a>
@@ -48,7 +54,7 @@
             <img class='logo' src='/img/Logo.png' />
         </span>
         <br />
-        <div class='leftslide'>
+        <div class='rightslide'>
             <div class="col-sm-2 col-lg-2">
             </div>
         </div>
