--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,7 @@
                 <a target="new" class="btn btnred" href="https://www.facebook.com/bdaaosu"><span style="color:white;" class="glyphicon-large"><i class="fa fa-facebook" aria-hidden="true"></i></span></a>
             </div>
             <div class="btn-group">
-                <a target="new" class="btn btnred" href="https://www.facebook.com/bdaaosu"><span style="color:white;" class="glyphicon-large"><i class="fa fa-linkedin" aria-hidden="true"></i></span></a>
+                <a target="new" class="btn btnred" href="https://www.linkedin.com/groups/8396056/profile"><span style="color:white;" class="glyphicon-large"><i class="fa fa-linkedin" aria-hidden="true"></i></span></a>
             </div>
             <div class="btn-group">
                 <a target="new" class="btn btnred" href="https://github.com/OhioStateBDAA"><span style="color:white;" class="glyphicon-large"><i class="fa fa-github" aria-hidden="true"></i></span></a>
