--- a/footer.html
+++ b/footer.html
@@ -9,16 +9,19 @@
                 <a target="new" class="btn btnred" href="mailto:ohiostatebdaa@gmail.com"><span style="color:white;" class="glyphicon-large"><i class="fa fa-envelope" aria-hidden="true"></i></span></a>
             </div>
             <div class="btn-group">
-                <a target="new" class="btn btnred" href="https://twitter.com/ohiostatebdaa"><span style="color:white;" class="glyphicon-large"><i class="fa fa-twitter" aria-hidden="true"></i></span></a>
+                <a target="new" class="btn btnred" href="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23c0c0c0&amp;src=39puh1lr6t17cs634lsmdrn86k%40group.calendar.google.com&amp;color=%23A32929&amp;ctz=America%2FNew_York"><span style="color:white;" class="glyphicon-large"><i class="fa fa-calendar" aria-hidden="true"></i></span></a>
             </div>
             <div class="btn-group">
-                <a target="new" class="btn btnred" href="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23c0c0c0&amp;src=39puh1lr6t17cs634lsmdrn86k%40group.calendar.google.com&amp;color=%23A32929&amp;ctz=America%2FNew_York"><span style="color:white;" class="glyphicon-large"><i class="fa fa-calendar" aria-hidden="true"></i></span></a>
+                <a target="new" class="btn btnred" href="https://twitter.com/ohiostatebdaa"><span style="color:white;" class="glyphicon-large"><i class="fa fa-twitter" aria-hidden="true"></i></span></a>
             </div>
             <div class="btn-group">
                 <a target="new" class="btn btnred" href="https://www.facebook.com/bdaaosu"><span style="color:white;" class="glyphicon-large"><i class="fa fa-facebook" aria-hidden="true"></i></span></a>
             </div>
             <div class="btn-group">
-                <a target="new" class="btn btnred" href="https://www.linkedin.com/groups/8396056/profile"><span style="color:white;" class="glyphicon-large"><i class="fa fa-linkedin" aria-hidden="true"></i></span></a>
+                <a target="new" class="btn btnred" href=">https://www.instagram.com/bdaaosu/"><span style="color:white;" class="glyphicon-large"><i class="fa fa-instagram" aria-hidden="true"></i></span></a>
+            </div>
+            <div class="btn-group">
+                <a target="new" class="btn btnred" href="https://www.linkedin.com/company/25068710/"><span style="color:white;" class="glyphicon-large"><i class="fa fa-linkedin" aria-hidden="true"></i></span></a>
             </div>
             <div class="btn-group">
                 <a target="new" class="btn btnred" href="https://github.com/OhioStateBDAA"><span style="color:white;" class="glyphicon-large"><i class="fa fa-github" aria-hidden="true"></i></span></a>
@@ -29,5 +32,5 @@
 </div>
 <script type="text/javascript">
 checkPageLoadsForAnimation();
-</script>
+</script
 
